devops/prod/digio-kubernetes-deployment-v2.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: digio-teste
    provider: fabric8
    version: REPLACE_VERSION
    group: br.com.digio
    canary: "true"
  name: digio-teste-v2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: digio-teste
      provider: fabric8
      group: br.com.digio
  template:
    metadata:
      labels:
        app: digio-teste
        provider: fabric8
        version: REPLACE_VERSION
        group: br.com.digio
        canary: "true"
      annotations:
        prometheus.io/scrape: 'true'
        prometheus.io/path: '/actuator/prometheus'
        prometheus.io/port: '8080'          
    spec:
      containers:
      - env:
        - name: KUBERNETES_NAMESPACE
          valueFrom:
            fieldRef:
              fieldPath: metadata.namespace
        - name: SPRING_PROFILES_ACTIVE
          value: develop
        - name: SERVICES_CONTA_URL
          value: http://conta:8080
        image: diegolirio/digio-teste:REPLACE_VERSION
        imagePullPolicy: Always
        name: digio-teste
        securityContext:
          privileged: false
