devops/prod/digio-kubernete-service.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    expose: "true"
    app: digio-teste
    provider: fabric8
    group: br.com.digio
  name: digio-teste    
spec:
  ports:
  - nodePort: 30070
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: digio-teste
    provider: fabric8
    group: br.com.digio
  type: LoadBalancer
