devops/prod/digio-kubernetes-virutal-service.yml
apiVersion: networking.istio.io/vialpha3
kind: DestinationRule
metadata:
  name: digio-destinationrule
  namespace: default
spec:
  host: digio-teste
  subsets:
  - name: v1
    labels:
      version: 0.0.46-RELEASE
  - name: v2
    labels:
      version: 0.0.53-RELEASE
---
apiVersion: networking.istio.io/vialpha3
kind: VirtualService
metadata:
  name: digio-vs
  namespace: default
spec:
  #hosts:
  #- "${url}"
  #gateways:
  #- ${gatewayname}
  http:
  - match:
      - uri:
          prefix: /
      #rewrite:
      #  uri: ${apppath}
      route:
      - destination:
          host: digio-teste
          subset: v1
        weight: 0.0.46-RELEASE
      - destination:
          host: digio-teste
          subset: v2
        weight: 0.0.53-RELEASE

# apiVersion: networking.istio.io/v1alpha3
# kind: VirtualService
# ...
# spec:
#   hosts:
#   - product-page-svc.bookinfo-k8s-helm-istio-canary.svc.cluster.local
#   gateways:
#   - product-page
#   http:
#   - route:
#     - destination:
#         host: product-page-svc.bookinfo-k8s-helm-istio-canary.svc.cluster.local
#         subset: production
#         port:
#           number: 9080
#       weight: 100
#     - destination:
#         host: product-page-svc.bookinfo-k8s-helm-istio-canary.svc.cluster.local
#         subset: canary
#         port:
#           number: 9080
#       weight: 0

# apiVersion: networking.istio.io/v1alpha3
# kind: VirtualService
# metadata:
#   name: nodejs
# spec:
#   hosts:
#   - "*"
#   gateways:
#   - nodejs-gateway
#   http:
#   - route:
#     - destination:
#         host: nodejs
#         subset: v1
#       weight: 80
#     - destination:
#         host: nodejs
#         subset: v2
#       weight: 20
